Clean up (removed redundant code)
https://github.com/GluuFederation/oxauth-config/issues/166